# detection_test_1

./: Cargo.toml  bboxes.json  draw_bboxes.py  draw_bboxes使用说明.txt  infer_onnx.py  infer_onnx使用说明.txt  onnxruntime_profile__2026-01-30_16-22-14.json  pred_bboxes.json  test.py
src/: lib.rs  main.rs
src/labelme/: label_config.rs  mod.rs
src/mock/: mock_data.rs
src/roi/: mod.rs  roi_tensor.rs
utils/: label_mapping.py  patch.py
