[package]
name = "detection_test_1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
image = "0.25.9"
jpeg-decoder = "0.3.2"
memmap2 = "0.9.9"
ndarray = "0.17.2"
ort = {version ="2.0.0-rc.11", features = ["cuda","ndarray", "tensorrt"]} 
serde = { version ="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
